--- a/app/views/member/registrations/new.html.erb
+++ b/app/views/member/registrations/new.html.erb
@@ -1,29 +1,65 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "member/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class = "container" >
+  <div class = "row">
+    <div class = "col-5 offset-3" >
+      <h1>新規会員登録</h1>
+    </div>
   </div>
+  <div clss = "row">
+    <div class = "col-11 offset-1">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "member/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+
+    <div class="row">
+      <p class = "col-3">
+        <%= f.label :first_name,"名前" %>
+      </p>
+      <p class = "col-3">
+        <%= f.text_field :name, autofocus: true %>
+    </div>
+    </div>
+    <div class="row">
+      <p class = "col-3">
+        <%= f.label :email,"メールアドレス" %>
+      </p>
+      <p class = "col-3">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </p>
+    </div>
+    <div class="row">
+      <p class = "col-3">
+        <%= f.label :password,"パスワード（6文字以上）" %>
+      </p>
+      <p class = "col-3">
+        <% if @minimum_password_length %>
+        <em><% @minimum_password_length %></em>
+        <% end %>
+        <%= f.password_field :password, autocomplete: "new-password" %>
+        </p>
+      </div>
+    <div class="row">
+      <p class = "col-3">
+        <%= f.label :password_confirmation,"パスワード（確認用）" %>
+      </p>
+      <p class = "col-3">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </p>
+    </div>
+    <div class = "row">
+      <div class = "col-5 offset-3">
+          <button>
+            <%= f.submit "新規登録" %>
+          </button>
+        </p>
+      </div>
+    </div>
+    <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class = "row" >
+    <div class = "col-5 offset-2">
+      <h3>既に登録済みの方</h3>
+      <h6><%= link_to "こちら",new_user_session_path %>からログインください。</h6>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "member/shared/links" %>
+</div>
