--- a/app/views/member/registrations/new.html.erb
+++ b/app/views/member/registrations/new.html.erb
@@ -12,7 +12,7 @@
 
     <div class="row">
       <p class = "col-3">
-        <%= f.label :first_name,"名前" %>
+        <%= f.label :name,"名前" %>
       </p>
       <p class = "col-3">
         <%= f.text_field :name, autofocus: true %>
