--- a/app/views/member/posts/new.html.erb
+++ b/app/views/member/posts/new.html.erb
@@ -30,6 +30,16 @@
   </div>
   <div class = "row">
     <div class = "col">
+       <h4>画像</h4>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
+      <%= f.file_field :image, accept: "image/*" %>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
       <%= f.submit '投稿',class:"btn btn-success" %>
     </div>
   </div>
