--- a/app/views/member/posts/show.html.erb
+++ b/app/views/member/posts/show.html.erb
@@ -1,2 +1,20 @@
 <h1>Member::Posts#show</h1>
 <p>Find me in app/views/member/posts/show.html.erb</p>
+
+<dic class = "container">
+  <div class = "row">
+    <div class = "col">
+      <h4>タイトル</h4>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
+      <h4><%=@pst.title%></h4>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
+      <%=@post.content%>
+    </div>
+  </div>
+</dic>
