--- a/app/views/member/posts/show.html.erb
+++ b/app/views/member/posts/show.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class = "row">
     <div class = "col">
-      <h4><%=@pst.title%></h4>
+      <h4><%=@post.title%></h4>
     </div>
   </div>
   <div class = "row">
