--- a/app/views/member/posts/edit.html.erb
+++ b/app/views/member/posts/edit.html.erb
@@ -1,2 +1,40 @@
 <h1>Member::Posts#edit</h1>
 <p>Find me in app/views/member/posts/edit.html.erb</p>
+
+<div class = "container">
+  <div class = "row">
+    <div class = "col">
+      <h2>投稿内容</h2>
+    </div>
+  </div>
+<%= form_with model:@post,url: post_path(@post.id),method: :patch do |f| %>
+  <div class = "row">
+    <div class = "col">
+      <h4>タイトル</h4>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
+      <%= f.text_area :title %>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
+      <h4>内容</h4>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
+      <%= f.text_area :content %>
+      </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
+     <%= f.submit'編集内容を投稿' %>
+    </div>
+    <div class = "col">
+       <h4><%= link_to "投稿内容を削除",post_path(@post.id),method: :delete %></h4>
+    </div>
+  </div>
+<% end %>
+</div>
