編集ページの中途

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
     <header>
@@ -16,6 +16,12 @@
       </li>
       <li>
         <%= link_to "マイページ", user_path(current_user.id) %>
+      </li>
+      <li>
+        <%= link_to "一覧",posts_path %>
+      </li>
+      <li>
+        <%= link_to "投稿",new_post_path %>
       </li>
     <% else %>
       <li>
