--- a/app/views/member/users/show.html.erb
+++ b/app/views/member/users/show.html.erb
@@ -1,36 +1,29 @@
 
-<% if @user.avatar? %>
-  <%= image_tag @user.avatar.url %>
-<% else %>
-  <%= image_tag ("user.jpeg") %>
-<% end %>
+
 
 <div class = "container">
   <div class = "row">
     <div class = "col">
       <h2>マイページ</h2>
+      <h2>
+        <% if @user.avatar? %>
+          <%= image_tag @user.avatar.url %>
+        <% else %>
+          <%= image_tag ("user.jpeg") %>
+        <% end %>
+      </h2>
+      <h2><%= link_to @user.name,edit_user_path%></h2>
     </div>
   </div>
-  <div class = "row">
-    <div class = "col">
-      <%= @user.name %>
-    </div>
-  </div>
-    <div class = "row">
-      <div class = "col">
-        <%= @avatar %>
-      </div>
-    </div>
 <% @posts.each do |post| %>
-<div class = "container">
   <div class = "row">
     <div class = "col">
       <div class = "image">
         <%= link_to post_path(post.id) do %>
-          <%if @post.image.present? %>
-            <% if @post.image.attached? %>
-              <% @post.image.each do |image| %>
-                <%= image_tag image.variant(resize: '500x500') %>
+          <%if post.images.present? %>
+            <% if post.images.attached? %>
+              <% post.images.each do |image| %>
+                <%= image_tag image.variant(resize: '200x200') %>
               <% end %>
             <% end %>
           <% else %>
@@ -41,23 +34,14 @@
     </div>
   </div>
   <div class = "row">
-    <div class = "col">
-    </div>
-  </div>
-  <div class = "row">
-    <div class = "col">
+    <div class = "col-12">
       <%= post.title %>
     </div>
   </div>
   <div class = "row">
-    <div class = "col">
+    <div class = "col-12">
       <%= post.content %>
     </div>
-  </div>
-    <div class = "row">
-      <div class = "col">
-        <%= post.user.name %>
-      </div>
   </div>
 <% end %>
 </div>
