--- a/app/views/member/posts/index.html.erb
+++ b/app/views/member/posts/index.html.erb
@@ -12,11 +12,19 @@
     <div class = "col">
       <h4>タイトル</h4>
     </div>
-    <div class = "col">
+    <div class = "col-12">
       <%=link_to post.title,post_path(post.id)%>
     </div>
     <div class = "col">
-        <%= image_tag post.image, size: "200x200" %>
+    <% post.images.each do |image| %>
+      <%if post.images.present? %>
+        <% if post.images.attached? %>
+            <%= image_tag image.variant(resize: '200x200') %>
+        <% end %>
+      <% else %>
+        <%= image_tag "no_images.png" %>
+      <% end %>
+    <% end %>
     </div>
   </div>
   <% end %>
