--- a/app/views/member/posts/show.html.erb
+++ b/app/views/member/posts/show.html.erb
@@ -12,17 +12,12 @@
       <h4><%=@post.title%></h4>
     </div>
   </div>
-  <div class = "row">
-    <div class = "col">
-      <%=@post.content%>
-    </div>
-  </div>
     <div class = "row">
       <div class = "col">
         <%if @post.images.present? %>
           <% if @post.images.attached? %>
             <% @post.images.each do |image| %>
-              <%= image_tag image.variant(resize: '100x100') %>
+              <%= image_tag image.variant(resize: '300x300') %>
             <% end %>
           <% end %>
         <% else %>
@@ -30,6 +25,33 @@
         <% end %>
       </div>
     </div>
+  <div class = "row">
+    <div class = "col">
+      <%=@post.content%>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
+      <h6>コメント<%=@post.comments.count %></h6>
+    </div>
+  </div>
+  <% @post.comments.each do |commten| %>
+  <div class = "row">
+    <div class = "col">
+      <%= image_tag comment.user.get_profile_image(100,100) %>
+      <%= comment.user.name %>
+      <%= comment.created_at.strftime('%Y/%m/%d') %><%= post.comment.comment %>
+    </div>
+  </div>
+  <% end %>
+  <div class = "row">
+    <div class = "col">
+      <%= form_with model:[@post,@comment] do |f| %>
+        <%= f.text_area :comment,rows:'2',placeholder:"コメントする" %>
+        <%= f.submit "コメント投稿" %>
+      <% end %>
+    </div>
+  </div>
   <div class = "row">
     <div class = "col">
     <% if @post.user == current_user %>
