--- a/app/views/member/posts/show.html.erb
+++ b/app/views/member/posts/show.html.erb
@@ -35,19 +35,19 @@
       <h6>コメント<%=@post.comments.count %></h6>
     </div>
   </div>
-  <% @post.comments.each do |commten| %>
+  <% @post.comments.each do |comment| %>
   <div class = "row">
     <div class = "col">
       <%= image_tag comment.user.get_profile_image(100,100) %>
       <%= comment.user.name %>
-      <%= comment.created_at.strftime('%Y/%m/%d') %><%= post.comment.comment %>
+      <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.content %>
     </div>
   </div>
   <% end %>
   <div class = "row">
     <div class = "col">
       <%= form_with model:[@post,@comment] do |f| %>
-        <%= f.text_area :comment,rows:'2',placeholder:"コメントする" %>
+        <%= f.text_area :content,rows:'2',placeholder:"コメントする" %>
         <%= f.submit "コメント投稿" %>
       <% end %>
     </div>
