--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,28 +10,12 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
     <header>
-    <% if user_signed_in? %>
-      <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-      <li>
-        <%= link_to "マイページ", user_path(current_user.id) %>
-      </li>
-      <li>
-        <%= link_to "一覧",posts_path %>
-      </li>
-      <li>
-        <%= link_to "投稿",new_post_path %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "新規登録", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_user_session_path %>
-      </li>
-    <% end %>
-  </header>
+      <% if request.path.match(/\/admin(\/)?/) %>
+      <%= render '/layouts/admin_header' %>
+      <% else %>
+      <%= render '/layouts/member_header',member: current_user %>
+      <% end %>
+    </header>
 
   <body>
     <%= yield %>
