--- a/app/views/member/posts/edit.html.erb
+++ b/app/views/member/posts/edit.html.erb
@@ -7,6 +7,15 @@
       <h2>投稿内容</h2>
     </div>
   </div>
+  <div class = "row">
+    <div classn = "col">
+    </div>
+  </div>
+  
+  
+  
+  
+  
 <%= form_with model:@post,url: post_path(@post.id),method: :patch do |f| %>
   <div class = "row">
     <div class = "col">
