--- a/app/views/member/posts/show.html.erb
+++ b/app/views/member/posts/show.html.erb
@@ -54,6 +54,24 @@
   </div>
   <div class = "row">
     <div class = "col">
+      
+      <% if @post.favoried_by?(current_user) %>
+        <p>
+          <%= link_to post_favorites_path(@post), method: :delete do %>
+            ♥<%= @post.favorites.count %> いいね
+          <% end %>
+        </p>
+      <% else %>
+        <p>
+          <%= link_to post_favorites_path(@post), method: :post do %>
+          ♡<%= @post.favorites.count %> いいね
+          <% end %>
+        </p>
+      <% end %>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
     <% if @post.user == current_user %>
       <td><%= link_to"投稿内容を編集する",edit_post_path(@post.id) %></td>
     <% else %>
