--- a/app/views/member/users/edit.html.erb
+++ b/app/views/member/users/edit.html.erb
@@ -6,7 +6,37 @@
   </div>
   <div class = "row">
     <div class = "col">
-
+       <%= image_tag @user.get_profile_image(200, 200) %>
     </div>
-  </div>
+    <%= form_with model:@user  do |f| %>
+    </div>
+      <div class = "row">
+          <div class = "col-12">
+            <h6>名前</h6>
+          </div>
+        </div>
+        <div class = "row">
+          <div class = "col-12">
+            <%= f.text_field :name %>
+          </div>
+        </div>
+        <div class = "row">
+          <div class = "col-12">
+             <h6>画像</h6>
+          </div>
+        </div>
+        <div class = "row">
+          <div class = "col">
+            <div class="field">
+              <% f.label :avatar %>
+              <%= f.file_field :avatar %>
+            </div>
+          </div>
+        </div>
+        <div class = "row">
+          <div class = "col">
+            <%= f.submit '投稿',class:"btn btn-success" %>
+          </div>
+        </div>
+      <% end %>
 </div>
