--- a/app/views/member/users/edit.html.erb
+++ b/app/views/member/users/edit.html.erb
@@ -35,6 +35,16 @@
         </div>
         <div class = "row">
           <div class = "col">
+            <h6>自己紹介</h6>
+          </div>
+        </div>
+        <div class = "row">
+          <div class = "col">
+            
+          </div>
+        </div>
+        <div class = "row">
+          <div class = "col">
             <%= f.submit '投稿',class:"btn btn-success" %>
           </div>
         </div>
