--- a/app/views/layouts/_member_header.html.erb
+++ b/app/views/layouts/_member_header.html.erb
@@ -14,13 +14,13 @@
         <i class="nav-link" href="#"><%= link_to "一覧",posts_path %><span class="sr-only">(current)</span></i>
       </li>
       <li class="nav-item">
-        <i class="nav-link disabled" href="#"><%= link_to "投稿",new_post_path %><span class="sr-only">(current)</span></i>
+        <i class="nav-link " href="#"><%= link_to "投稿",new_post_path %><span class="sr-only">(current)</span></i>
       </li>
       <li class="nav-item">
-        <i class="nav-link disabled" href="#"><%= link_to "マイページ", user_path(current_user.id) %><span class="sr-only">(current)</span></i>
+        <i class="nav-link " href="#"><%= link_to "マイページ", user_path(current_user.id) %><span class="sr-only">(current)</span></i>
       </li>
       <li class="nav-item">
-        <i class="nav-link disabled" href="#"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %><span class="sr-only">(current)</span></i>
+        <i class="nav-link " href="#"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %><span class="sr-only">(current)</span></i>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
