--- a/app/views/member/homes/top.html.erb
+++ b/app/views/member/homes/top.html.erb
@@ -35,6 +35,25 @@
         <%= link_to "#{post.comments.count}コメント",post_path(post.id) %>
       </div>
     </div>
+  <% if user_signed_in? %>
+  <div class = "row">
+    <div class = "col">
+      <% if post.favoried_by?(current_user) %>
+        <p>
+          <%= link_to post_favorites_path(post), method: :delete do %>
+            ♥<%= post.favorites.count %> いいね
+          <% end %>
+        </p>
+      <% else %>
+        <p>
+          <%= link_to post_favorites_path(post), method: :post do %>
+          ♡<%= post.favorites.count %> いいね
+          <% end %>
+        </p>
+      <% end %>
+    </div>
+  </div>
+  <% end %>
   <% end %>
     </div>
   </div>
