--- a/app/views/member/posts/show.html.erb
+++ b/app/views/member/posts/show.html.erb
@@ -9,7 +9,12 @@
   </div>
   <div class = "row">
     <div class = "col">
-      <h4><%=@post.title%></h4>
+      <% if @post.user == current_user %>
+        <td><%= link_to @post.title,edit_post_path(@post.id) %></td>
+      <% else %>
+        <td></td>
+        <td></td>
+      <% end %>
     </div>
   </div>
     <div class = "row">
@@ -38,9 +43,10 @@
   <% @post.comments.each do |comment| %>
   <div class = "row">
     <div class = "col">
-      <%= image_tag comment.user.get_profile_image(100,100) %>
-      <%= comment.user.name %>
-      <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.content %>
+      <p><%= image_tag comment.user.get_profile_image(50,50) %>
+         <%= comment.user.name %>
+      </p>
+         <%= comment.content %>
     </div>
   </div>
   <% end %>
@@ -54,7 +60,7 @@
   </div>
   <div class = "row">
     <div class = "col">
-      
+
       <% if @post.favoried_by?(current_user) %>
         <p>
           <%= link_to post_favorites_path(@post), method: :delete do %>
