--- a/app/views/member/users/show.html.erb
+++ b/app/views/member/users/show.html.erb
@@ -14,7 +14,7 @@
   <div class = "row">
     <div class = "col-12">
       <h4>タイトル</h4>
-      <%= post.title %>
+        <td><%= link_to post.title,post_path(post.id) %></td>
     </div>
   </div>
   <div class = "row">
