--- a/app/views/member/homes/top.html.erb
+++ b/app/views/member/homes/top.html.erb
@@ -1,60 +1,42 @@
 <div class = "container">
-  <div class = "row">
-    <div class = "col">
-  <% @posts.each do |post| %>
-  <div class = "row">
-    <div class = "col">
-      <h4>タイトル</h4>
-    </div>
-  </div>
-    <div class = "row">
-      <div class = "col-12">
-        <%=link_to post.title,post_path(post.id)%>
-      </div>
-    </div>
-    <div class = "row">
-      <div class = "col">
-        <% post.images.each do |image| %>
-          <%if post.images.present? %>
-            <% if post.images.attached? %>
-              <%= image_tag image.variant(resize: '200x200') %>
+<% @posts.each do |post| %>
+ <div class = "row">
+   <div class = "col">
+     <div class="card mb-3" style="max-width: 540px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+            <% #post.images.each do |image| %>
+              <% if post.images.attached? %>
+                  <%= image_tag post.images[0].variant(resize: '100x100'),class: "w-100" %>
+              <% else %>
+                  <%= image_tag "no_images.png",class: "w-100" %>
+              <% end %>
+            <% #end %>
+        </div>
+        <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title"><%=link_to post.title,post_path(post.id)%></h5>
+          <p class="card-text"><%= post.content.truncate(16) %></p>
+          <p class="card-text"><%= post.user.name %></p>
+          <p class="card-text"><small class="text-muted">
+            <%= link_to "#{post.comments.count}コメント",post_path(post.id) %>
+            <% if user_signed_in? %>
+              <% if post.favoried_by?(current_user) %>
+                <%= link_to post_favorites_path(post), method: :delete do %>
+                ♥<%= post.favorites.count %> いいね
+                <% end %>
+              <% else %>
+                <%= link_to post_favorites_path(post), method: :post do %>
+                ♡<%= post.favorites.count %> いいね
+                <% end %>
+              <% end %>
             <% end %>
-          <% else %>
-            <%= image_tag "no_images.png" %>
-          <% end %>
-        <% end %>
+              </small></p>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class = "row">
-      <div class = "col">
-        <%= post.content %>
-      </div>
-    </div>
-    <div class = "row">
-      <div class = "col">
-        <%= link_to "#{post.comments.count}コメント",post_path(post.id) %>
-      </div>
-    </div>
-  <% if user_signed_in? %>
-  <div class = "row">
-    <div class = "col">
-      <% if post.favoried_by?(current_user) %>
-        <p>
-          <%= link_to post_favorites_path(post), method: :delete do %>
-            ♥<%= post.favorites.count %> いいね
-          <% end %>
-        </p>
-      <% else %>
-        <p>
-          <%= link_to post_favorites_path(post), method: :post do %>
-          ♡<%= post.favorites.count %> いいね
-          <% end %>
-        </p>
-      <% end %>
     </div>
   </div>
-  <% end %>
-  <% end %>
-    </div>
-  </div>
+<% end %>
 </div>
