--- a/app/views/member/posts/index.html.erb
+++ b/app/views/member/posts/index.html.erb
@@ -1,45 +1,39 @@
-<h1>Member::Posts#index</h1>
-<p>Find me in app/views/member/posts/index.html.erb</p>
-
+<% @posts.each do |post| %>
 <div class ="container">
-  <div class = "row">
-    <div class = "col">
-      <h2>デカ盛り一覧</h2>
-    </div>
-  </div>
-  <% @posts.each do |post| %>
-  <div class = "row">
-    <div class = "col">
-      <h4>タイトル</h4>
-    </div>
-  </div>
-    <div class = "row">
-      <div class = "col-12">
-        <%=link_to post.title,post_path(post.id)%>
-      </div>
-    </div>
-    <div class = "row">
-      <div class = "col">
+   <div class="card mb-3">
+     <div class = "row">
         <% post.images.each do |image| %>
-          <%if post.images.present? %>
-            <% if post.images.attached? %>
-              <%= image_tag image.variant(resize: '200x200') %>
+          <div class = "col">
+            <%if post.images.present? %>
+              <% if post.images.attached? %>
+                <%= image_tag image,class: "w-100" %>
+          </div>
+              <% end %>
+            <% else %>
+                <%= image_tag "no_images.png",class: "w-100" %>
             <% end %>
-          <% else %>
-            <%= image_tag "no_images.png" %>
           <% end %>
-        <% end %>
       </div>
+        <div class="card-body">
+          <h5 class="card-title"><%=link_to post.title,post_path(post.id),style: "color: black;" %></h5>
+            <p class="card-text"><%= post.content %></p>
+            <p class="card-text">
+              <small class="text-muted">
+                <%= link_to "#{post.comments.count}コメント",post_path(post.id) %>
+                <% if user_signed_in? %>
+                  <% if post.favoried_by?(current_user) %>
+                  <%= link_to post_favorites_path(post), method: :delete do %>
+                  ♥<%= post.favorites.count %> いいね
+                  <% end %>
+                <% else %>
+                  <%= link_to post_favorites_path(post), method: :post do %>
+                  ♡<%= post.favorites.count %> いいね
+                  <% end %>
+                  <% end %>
+                <% end %>
+              </small>
+            </p>
+        </div>
     </div>
-    <div class = "row">
-      <div class = "col">
-        <%= post.content %>
-      </div>
-    </div>
-    <div class = "row">
-      <div class = "col">
-        <%= link_to "#{post.comments.count}コメント",post_path(post.id) %>
-      </div>
-    </div>
-  <% end %>
 </div>
+<% end %>
