--- a/app/views/member/posts/new.html.erb
+++ b/app/views/member/posts/new.html.erb
@@ -1,6 +1,10 @@
 <h1>Member::Posts#new</h1>
 <p>Find me in app/views/member/posts/new.html.erb</p>
 
+<% flash.each do |message_type, message| %>
+　　<div class="alert alert-<%= message_type %>"><%= message %></div>
+<% end %>
+
 <div class = "container">
   <div class = "row">
     <div class = "col">
