--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,15 +1,42 @@
 <div class = "container">
   <div class = "row">
-    <div class = "col">
+    <div class = "col-8">
       <h4>ユーザー詳細</h4>
+    </div>
+    <div class = "col">
+
     </div>
   </div>
   <div class = "row">
     <div class = "col">
-            <h2>
+      <h2>
         <%= image_tag @user.get_profile_image(300, 300) %>
       </h2>
-      <h2><%= @user.name %></h2>
+    </div>
+    <div class = "col"></div>
+    <div class = "col">
+      <button type="button" class="btn btn-danger"><%= link_to "ユーザーを削除？",admin_user_path(@user.id),method: :delete,data: { confirm: '本当に削除しますか？'} ,style: "color: black;"%></button>
     </div>
   </div>
+  <div class = "row">
+    <div class = "col">
+      <h3>ユーザーネーム</h3>
+    </div>
+    <div class = "col"></div>
+    <div class = "col">
+      <h3><%= @user.name %></h3>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
+      <h3>投稿内容</h3>
+    </div>
+  </div>
+    <div class="card" style="width:auto;">
+      <ul class="list-group list-group-flush">
+        <% @user.posts.each do |post| %>
+        <li class="list-group-item"><%= link_to post.title,admin_post_path(post.id) %></li>
+        <% end %>
+      </ul>
+    </div>
 </div>
