--- a/app/views/member/comments/show.html.erb
+++ b/app/views/member/comments/show.html.erb
@@ -13,26 +13,21 @@
     </div>
   <div class = "row">
     <div class = "col">
-      <table class="table table-borderless">
-        <tbody>
-          <tr>
-            <th scope="row">
-              <%= image_tag @comment.user.get_profile_image(50,50) %>
-              <%= @comment.user.name %>
-            </th>
-            <td>
-              <%= @comment.content %>
-            </td>
-            <tb>
-            </tb>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class = "row">
-    <div class = "col">
-      <%= link_to "コメント削除",post_comment_path(@post.id, @comment.id),method: :delete,style: "color: black;" data: { confirm: '本当に削除しますか？' } %>
-    </div>
-  </div>
-</div>
+      <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">ユーザー画像</th>
+      <th scope="col">ユーザネーム</th>
+      <th scope="col">コメ</th>
+      <th scope="col">削除する</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row"><%= image_tag @comment.user.get_profile_image(50,50) %></th>
+      <td><%= @comment.user.name %></td>
+      <td><%= @comment.content %></td>
+      <td><%= link_to "コメント削除",post_comment_path(@post.id, @comment.id),method: :delete, data: { confirm: '本当に削除しますか？' } %></td>
+    </tr>
+  </tbody>
+</table>
