--- a/app/views/layouts/_member_header.html.erb
+++ b/app/views/layouts/_member_header.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
   <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">デカ盛り食堂</a>
+  <a class="navbar-brand" href="#">デカ盛り</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -23,10 +23,10 @@
         <i class="nav-link " href="#"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %><span class="sr-only">(current)</span></i>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+      <%= form_with url: search_path, method: :get do %>
+        <%= text_field_tag :search, params[:search], class: "form-control", id: "search_area", placeholder: "タイトルを入力"%>
+        <%= submit_tag '検索' %>
+      <% end %>
   </div>
 </nav>
 <% else %>
@@ -49,8 +49,6 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
 </nav>
