--- a/app/views/member/homes/top.html.erb
+++ b/app/views/member/homes/top.html.erb
@@ -1,11 +1,14 @@
+
 <% if user_signed_in? %>
 <div class="container">
   <div class = "row">
-    <div class = "col">
-      <button type="button" class="btn btn-outline-warning"><%= link_to "一覧ページへ",posts_path %></button>
+    <div class = "col-10">
+    </div>
+    <div class = "col mt-2 mb-5">
+      <p><button type="button" class="btn btn-outline-warning"><h2><%= link_to "食覧",posts_path %></h2></button></p>
     </div>
   </div>
-  <div class="card-deck">
+  <div class="card-deck mt-5">
     <% @posts.each do |post| %>
       <div class="card">
         <% if post.images.attached? %>
@@ -28,7 +31,7 @@
   </div>
 </div>
 <% else %>
-  <div class="jumbotron">
+<div class = "background_img">
   <div class='index-content text-center'>
     <h1 class='home-index'>デカ盛り！ザ・食！</h1>
 
