--- a/app/views/member/posts/edit.html.erb
+++ b/app/views/member/posts/edit.html.erb
@@ -1,49 +1,26 @@
-<h1>Member::Posts#edit</h1>
-<p>Find me in app/views/member/posts/edit.html.erb</p>
 
 <div class = "container">
   <div class = "row">
-    <div class = "col">
+    <div class = "col mt-4">
       <h2>投稿内容</h2>
     </div>
   </div>
-  <div class = "row">
-    <div classn = "col">
-    </div>
-  </div>
-
-
-
-
-
 <%= form_with model:@post,url: post_path(@post.id),method: :patch do |f| %>
-  <div class = "row">
-    <div class = "col">
-      <h4>タイトル</h4>
-    </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput">タイトル</label><br>
+      <%= f.text_field :title %>
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">内容</label><br>
+    <%= f.text_area :content %>
   </div>
   <div class = "row">
     <div class = "col">
-      <%= f.text_area :title %>
+      <%= f.submit'編集内容を投稿' %>
     </div>
   </div>
-  <div class = "row">
-    <div class = "col">
-      <h4>内容</h4>
-    </div>
-  </div>
-  <div class = "row">
-    <div class = "col">
-      <%= f.text_area :content %>
-      </div>
-  </div>
-  <div class = "row">
-    <div class = "col">
-     <%= f.submit'編集内容を投稿' %>
-    </div>
+ <% end %>
     <div class = "col">
        <h4><%= link_to "投稿内容を削除",post_path(@post.id),method: :delete, data: { confirm: '本当に削除しますか？' } %></h4>
     </div>
   </div>
-<% end %>
-</div>
