--- a/app/views/member/registrations/new.html.erb
+++ b/app/views/member/registrations/new.html.erb
@@ -1,62 +1,56 @@
-<div class = "container" >
+<div class = "container">
   <div class = "row">
-    <div class = "col-5 offset-3" >
-      <h1>新規会員登録</h1>
+    <div class = "col offset-4">
+      <p><h1>新規会員登録</h1></p>
     </div>
   </div>
-  <div clss = "row">
-    <div class = "col-11 offset-1">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "member/shared/error_messages", resource: resource %>
-
-
-    <div class="row">
-      <p class = "col-3">
-        <%= f.label :name,"名前" %>
-      </p>
-      <p class = "col-3">
-        <%= f.text_field :name, autofocus: true %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= render "member/shared/error_messages", resource: resource %>
+  <div class = "row">
+    <div class = "col">
+      <p><%= f.label :name,"名前（ニックネーム）" %></p>
     </div>
+    <div class = "col">
+      <%= f.text_field :name, autofocus: true %>
     </div>
-    <div class="row">
-      <p class = "col-3">
-        <%= f.label :email,"メールアドレス" %>
-      </p>
-      <p class = "col-3">
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-      </p>
+  </div>
+  <div class = "row">
+    <div class = "col">
+      <p><%= f.label :email,"メールアドレス" %></p>
     </div>
-    <div class="row">
-      <p class = "col-3">
-        <%= f.label :password,"パスワード（6文字以上）" %>
-      </p>
-      <p class = "col-3">
-        <% if @minimum_password_length %>
+    <div class = "col">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
+      <p><%= f.label :password,"パスワード（6文字以上）" %></p>
+    </div>
+    <div class = "col">
+      <% if @minimum_password_length %>
         <em><% @minimum_password_length %></em>
-        <% end %>
-        <%= f.password_field :password, autocomplete: "new-password" %>
-        </p>
-      </div>
-    <div class="row">
-      <p class = "col-3">
-        <%= f.label :password_confirmation,"パスワード（確認用）" %>
-      </p>
-      <p class = "col-3">
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-      </p>
-    </div>
-    <div class = "row">
-      <div class = "col-5 offset-3">
-            <%= f.submit "新規登録" %>
-      </div>
-    </div>
-    <% end %>
+      <% end %>
+      <%= f.password_field :password, autocomplete: "new-password" %>
     </div>
   </div>
-  <div class = "row" >
-    <div class = "col-5 offset-2">
+  <div class = "row">
+    <div class = "col">
+      <p><%= f.label :password_confirmation,"パスワード（確認用）" %></p>
+    </div>
+    <div class = "col">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col offset-6">
+      <%= f.submit "新規登録",class: "btn btn-outline-primary" %>
+    </div>
+  </div>
+  <% end %>
+  <div class = "row">
+    <div class = "col">
       <h3>既に登録済みの方</h3>
-      <h6><%= link_to "こちら",new_user_session_path %>からログインください。</h6>
+      <h6><%= link_to "こちら",new_user_session_path,type: "button", class: "btn btn-outline-info" %>からログインください。</h6>
     </div>
   </div>
 </div>
