--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -12,20 +12,18 @@
       <th scope="col">ユーザーネーム</th>
       <th scope="col">タイトル</th>
       <th scope="col">内容</th>
+      <th scope="col">詳細</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row">
-         <% if post.images.attached? %>
-            <%= image_tag post.images[0].variant(resize: '100x100'),class: "w-100" %>
-          <% else %>
-            <%= image_tag "no_images.png",class: "w-100" %>
-          <% end %>
+        <%= image_tag post.images[0],style: " height: 200px;object-fit:cover;" %>
       </th>
-      <td><%= link_to post.user.name,admin_post_path(post.id) %></td>
+      <td><%= post.user.name %></td>
       <td><%= post.title %></td>
       <td><%= post.content %></td>
+      <td><%= link_to "投稿詳細",admin_post_path(post.id) %></td>
     </tr>
   </tbody>
 </table>
