--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,30 +1,27 @@
 <div class = "container">
   <div class = "row">
-    <div class = "col">
+    <div class = "col md-3 mt-3">
       <h3>詳細</h3>
     </div>
+    <div class = "co mt-3">
+      <%= link_to "投稿を削除する？",admin_post_path(@posts.id),class: "btn btn-outline-danger",method: :delete,data: { confirm: '本当に削除しますか？' } %>
+    </div>
   </div>
-    <%if @posts.images.present? %>
-      <% if @posts.images.attached? %>
-      <div class="row">
-        <% @posts.images.each do |image| %>
-          <div class="col-6">
-          <%= image_tag image,class: "w-100" %>
-          </div>
-        <% end %>
-      <% end %>
-
-    <% else %>
-      <%= image_tag "no_images.png" ,class: "w-100" %>
+  <div class="row">
+    <% @posts.images.each do |image| %>
+    <div class="col-6 mt-3 mb-5">
+      <%= image_tag image,class: "w-100" %>
+    </div>
     <% end %>
-      <div class = "col">
+  </div>
+  <div class = "row">
+      <div class = "col mb-3">
         <h4>ユーザーネーム</h4>
       </div>
-      <div class = "col">
+      <div class = "col mb-3">
         <%= @posts.user.name %>
       </div>
-      <%= link_to "投稿を削除する？",admin_post_path(@posts.id),method: :delete,data: { confirm: '本当に削除しますか？' } %>
-    </div>
+  </div>
   <div class="card" style="width:auto;">
     <div class="card-body">
           <div class="row">
