--- a/app/views/member/posts/edit.html.erb
+++ b/app/views/member/posts/edit.html.erb
@@ -4,23 +4,30 @@
     <div class = "col mt-4">
       <h2>投稿内容</h2>
     </div>
-  </div>
-<%= form_with model:@post,url: post_path(@post.id),method: :patch do |f| %>
-  <div class="form-group">
-    <label for="formGroupExampleInput">タイトル</label><br>
-      <%= f.text_field :title %>
-  </div>
-  <div class="form-group">
-    <label for="formGroupExampleInput2">内容</label><br>
-    <%= f.text_area :content %>
+    <div class = "col offset-5 mt-4">
+      <h4><%= link_to "投稿内容を削除する？",post_path(@post.id),class: "btn btn-outline-danger",method: :delete,  data: { confirm: '本当に削除しますか？' } %></h4>
+    </div>
   </div>
   <div class = "row">
-    <div class = "col">
-      <%= f.submit'編集内容を投稿' %>
+    <div class = "col mt-2 ml-4 mr-2 mb-4 ">
+      <% @post.images.each do |image| %>
+        <%= image_tag image,style: "height: 300px;object-fit:cover;" %>
+      <% end %>
+    </div>
+  </div>
+<%= form_with model:@post,url: post_path(@post.id),method: :patch do |f| %>
+  <div class="form-group ml-4">
+    <label for="formGroupExampleInput">タイトル</label><br>
+      <%= f.text_field :title, size: "110x50" %>
+  </div>
+  <div class="form-group ml-4">
+    <label for="formGroupExampleInput2">内容</label><br>
+    <%= f.text_area :content,size:"110" %>
+  </div>
+  <div class = "row">
+    <div class = "col offset-9">
+      <%= f.submit'編集内容を投稿',class: "btn btn-outline-success"  %>
     </div>
   </div>
  <% end %>
-    <div class = "col">
-       <h4><%= link_to "投稿内容を削除",post_path(@post.id),method: :delete, data: { confirm: '本当に削除しますか？' } %></h4>
-    </div>
-  </div>
+</div>
