--- a/app/views/member/users/edit.html.erb
+++ b/app/views/member/users/edit.html.erb
@@ -1,52 +1,32 @@
+
 <div class = "container">
   <div class = "row">
-    <div class = "col">
-      <h4>ユーザー編集</h4>
+    <div class = "col mt-4">
+      <h2>ユーザー編集</h2>
+    </div>
+    <div class = "col offset-6 mt-4">
+      <h4><%= link_to "退会する？",confirm_path,class: "btn btn-outline-danger" %></h4>
     </div>
   </div>
   <div class = "row">
-    <div class = "col">
-       <%= image_tag @user.get_profile_image(200, 200),class: "img-thumbnail" %>
+    <div class = "col mt-2 ml-4 mr-2 mb-4 ">
+      <%= image_tag @user.get_profile_image(200, 200),class: "img-thumbnail" %>
     </div>
-    <%= form_with model:@user  do |f| %>
+  </div>
+<%= form_with model:@user  do |f| %>
+  <div class="form-group ml-4">
+    <label for="formGroupExampleInput">名前</label><br>
+      <%= f.text_field :name, size: "60x50" %>
+  </div>
+  <div class="form-group ml-4">
+    <label for="formGroupExampleInput2">画像</label><br>
+      <% f.label :avatar %>
+      <%= f.file_field :avatar %>
+  </div>
+  <div class = "row">
+    <div class = "col offset-9">
+      <%= f.submit'ユーザ更新',class: "btn btn-outline-success"  %>
     </div>
-      <div class = "row">
-          <div class = "col-12">
-            <h6>名前</h6>
-          </div>
-        </div>
-        <div class = "row">
-          <div class = "col-12">
-            <%= f.text_field :name %>
-          </div>
-        </div>
-        <div class = "row">
-          <div class = "col-12">
-             <h6>画像</h6>
-          </div>
-        </div>
-        <div class = "row">
-          <div class = "col">
-            <div class="field">
-              <% f.label :avatar %>
-              <%= f.file_field :avatar %>
-            </div>
-          </div>
-        </div>
-        <div class = "row">
-          <div class = "col">
-            <h6>自己紹介</h6>
-          </div>
-        </div>
-        <div class = "row">
-          <div class = "col">
-            
-          </div>
-        </div>
-        <div class = "row">
-          <div class = "col">
-            <%= f.submit '投稿',class:"btn btn-success" %>
-          </div>
-        </div>
-      <% end %>
+  </div>
+ <% end %>
 </div>
