--- a/app/views/member/users/show.html.erb
+++ b/app/views/member/users/show.html.erb
@@ -2,13 +2,21 @@
 
 <div class = "container">
   <div class = "row">
+    <div class = "col mt-2 mb-2 offset-8">
+      <%= link_to "プロフィール編集",edit_user_path(@user.id),class: "btn btn-outline-success"%>
+    </div>
+  </div>
+  <div class = "row">
     <div class = "col">
-      <h2>
-        <%= link_to edit_user_path do %>
-        <%= image_tag @user.get_profile_image(200, 200),class: "img-thumbnail" %>
-        <% end %>
-      </h2>
-      <h2><%= link_to @user.name,edit_user_path,style: "color: black;" %></h2>
+      <%= image_tag @user.get_profile_image(200, 200),class: "img-thumbnail" %>
+    </div>
+  </div>
+  <div class = "row mt-3 mb-5">
+    <div class = "col">
+      <h3>ユーザーネーム</h3>
+    </div>
+    <div class = "col">
+      <h4><%= @user.name%></h4>
     </div>
   </div>
   <% @posts.each do |post| %>
