--- a/app/views/member/homes/top.html.erb
+++ b/app/views/member/homes/top.html.erb
@@ -1,10 +1,7 @@
-
 <% if user_signed_in? %>
 <div class="container">
   <div class = "row">
-    <div class = "col-10">
-    </div>
-    <div class = "col mt-2 mb-5">
+    <div class = "col offset-10 mt-2 mb-5">
       <p><button type="button" class="btn btn-outline-warning"><h2><%= link_to "食覧",posts_path %></h2></button></p>
     </div>
   </div>
@@ -18,13 +15,14 @@
         <% end %>
         <div class="card-body">
           <h5 class="card-title"><%=post.title%></h5>
-           <p class="card-text"><%= post.content.truncate(15) %></p>
+          <p class="card-text"><%= post.content.truncate(15) %></p>
           <p class="card-text"><%= post.user.name %></p>
           <p class="card-text">
-          <small class="text-muted">
-          <%= post.comments.count %>コメント
-           ♥<%= post.favorites.count %> いいね
-          </small></p>
+            <small class="text-muted">
+              <%= post.comments.count %>コメント
+              ♥<%= post.favorites.count %> いいね
+            </small>
+          </p>
         </div>
       </div>
     <%end%>
@@ -34,9 +32,7 @@
 <div class = "background_img">
   <div class='index-content text-center'>
     <h1 class='home-index'>デカ盛り！ザ・食！</h1>
-
     <div class='index-btn d-flex justify-content-around'>
-
       <%= link_to '新規登録', new_user_registration_path, class: "btn btn-success btn-lg" %>
       <%= link_to 'ログイン', new_user_session_path, class: "btn btn-success btn-lg" %>
     </div>
