レイアウト

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -7,3 +7,9 @@
   height: 800px;
   background-size:cover;
 }
+
+.background {
+  background-image: url('../images/IMG_0039.JPG');
+  height: 800px;
+  background-size:cover;
+}
