--- a/app/views/member/homes/top.html.erb
+++ b/app/views/member/homes/top.html.erb
@@ -1,37 +1,39 @@
 <% if user_signed_in? %>
-<div class="container">
-  <div class = "row">
-    <div class = "col offset-10 mt-2 mb-5">
-      <p><button type="button" class="btn btn-outline-warning"><h2><%= link_to "食覧",posts_path %></h2></button></p>
-    </div>
-  </div>
-  <div class="card-deck mt-5">
-    <% @posts.each do |post| %>
-      <div class="card">
-        <% if post.images.attached? %>
-          <%= image_tag post.images[0].variant(resize: '50x50') %>
-        <% else %>
-          <%= image_tag "no_images.png"%>
-        <% end %>
-        <div class="card-body">
-          <h5 class="card-title"><%=post.title%></h5>
-          <p class="card-text"><%= post.content.truncate(15) %></p>
-          <p class="card-text"><%= post.user.name %></p>
-          <p class="card-text">
-            <small class="text-muted">
-              <%= post.comments.count %>コメント
-              ♥<%= post.favorites.count %> いいね
-            </small>
-          </p>
-        </div>
+<div class = "background_img ">
+  <div class="container">
+    <div class = "row">
+      <div class = "col offset-10 mt-2 mb-5">
+        <p><button type="button" class="btn btn-outline-warning"><h2><%= link_to "食覧",posts_path %></h2></button></p>
       </div>
-    <%end%>
+    </div>
+    <div class="card-deck mt-5">
+      <% @posts.each do |post| %>
+        <div class="card">
+          <% if post.images.attached? %>
+            <%= image_tag post.images[0].variant(resize: '50x50') %>
+          <% else %>
+            <%= image_tag "no_images.png"%>
+          <% end %>
+          <div class="card-body">
+            <h5 class="card-title"><%=post.title%></h5>
+            <p class="card-text"><%= post.content.truncate(15) %></p>
+            <p class="card-text"><%= post.user.name %></p>
+            <p class="card-text">
+              <small class="text-muted">
+                <%= post.comments.count %>コメント
+                ♥<%= post.favorites.count %> いいね
+              </small>
+            </p>
+          </div>
+        </div>
+      <%end%>
+    </div>
   </div>
 </div>
 <% else %>
-<div class = "background_img">
+<div class = "background">
   <div class='index-content text-center'>
-    <h1 class='home-index'>デカ盛り！ザ・食！</h1>
+    <h1 class='home-index mb-5'>デカ盛り・ビュー</h1></h1>
     <div class='index-btn d-flex justify-content-around'>
       <%= link_to '新規登録', new_user_registration_path, class: "btn btn-success btn-lg" %>
       <%= link_to 'ログイン', new_user_session_path, class: "btn btn-success btn-lg" %>
