--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -15,11 +15,21 @@
 }
 
 .index-content {
-  width: 600px;
-  height: 150px;
+  width: 800px;
+  height: 160px;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
   background-color: rgba(255,255,255,0.5);
+}
+
+#back {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+}
+.arrow{
+  width:      50px;
+  height:     50px;
 }
