--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,7 +4,7 @@
 .background {
   background-image: url('../images/IMG_0089.JPG');
   height: 1000px;
-  background-size:cover;
+  background-size:contain;
 }
 
 .index-content {
@@ -12,7 +12,7 @@
   height: 160px;
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 60%;
   transform: translate(-50%,-50%);
   background-color: rgba(255,255,255,0.5);
 }
