--- a/app/views/member/posts/show.html.erb
+++ b/app/views/member/posts/show.html.erb
@@ -1,18 +1,20 @@
 <div class = "container">
       <div class="card mt-5" style="width: auto;">
           <div class="row">
-            <% @post.images.each do |image| %>
-              <div class="col-6">
-                <%= image_tag image, style: "height: 300px;object-fit:cover;" %>
+            <div class= "col">
+              <div class="slider">
+                <% @post.images.each do |image| %>
+                  <%= image_tag image,class: "show-img" %>
+                <% end %>
               </div>
-            <% end %>
+            </div>
           </div>
         <div class="card-body">
           <h5 class="card-title">
             <% if @post.user == current_user %>
               <%= link_to @post.title,edit_post_path(@post.id),style: "color: black;" %>
             <% else %>
-              <td></td>
+              <td><%= @post.title%></td>
             <% end %>
           </h5>
           <p class="card-text"><%=@post.content%></p>
