--- a/app/views/member/posts/show.html.erb
+++ b/app/views/member/posts/show.html.erb
@@ -4,7 +4,7 @@
             <div class= "col">
               <div class="slider">
                 <% @post.images.each do |image| %>
-                  <%= image_tag image,class: "show-img" %>
+                  <%= image_tag image,class: "card-img-top show-img" %>
                 <% end %>
               </div>
             </div>
